upgrade schema spy